4. Kubernetes core concepts/http-go-pod-v3.yaml
apiVersion: v1
kind: Pod
metadata:
name: http-go-v3
labels:
creation_method: manual-v3
spec:
containers:

- name: http-go
image: gasbugs/http-go
ports:
    - containerPort: 8080
    protocol: TCP
